--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Natalia Laszczkowska <natalia.laszczkowskax@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "serve": "nodemon server.js"
