--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.65.1",
     "socket.io-client": "4.7.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "webpack-dev-server": "^4.15.1"
   }
 }
