--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "sass": "^1.65.1",
     "socket.io-client": "4.7.2",
     "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
